--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "chainlit>=2.4.201",
+    "db-dtypes>=1.4.2",
+    "google-cloud-bigquery>=3.30.0",
+    "google-cloud-bigquery-storage>=2.29.1",
     "llama-index>=0.12.25",
     "llama-index-llms-openai>=0.3.25",
+    "loguru>=0.7.3",
+    "sqlparse>=0.5.3",
 ]
