--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "TripAdvisor Food Bot"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "boto3>=1.38.26",
     "db-dtypes>=1.4.2",
     "fastembed>=0.4.2",
     "google-cloud-bigquery>=3.30.0",
@@ -13,10 +14,14 @@ dependencies = [
     "loguru>=0.7.3",
     "numba>=0.61.2",
     "pandas>=2.2.3",
+    "pytest>=8.3.5",
     "qdrant-client>=1.12.1",
     "scikit-learn>=1.6.1",
     "sqlparse>=0.5.3",
     "streamlit>=1.45.1",
+    "streamlit-authenticator>=0.4.2",
+    "streamlit-geolocation>=0.0.10",
+    "tabulate>=0.9.0",
     "unidecode>=1.4.0",
     "uuid>=1.30",
     "watchdog>=6.0.0",
@@ -29,3 +34,9 @@ dev = [
 
 [tool.ruff]
 line-length = 120
+
+[tool.ruff.lint]
+select = ["F", "I", "RUF022"]
+
+[tool.uv]
+package = true
