✨ feat: update project with submodules

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,13 @@
 OPENAI_API_KEY=your-api-key
 QDRANT_API_KEY=your-api-key
 QDRANT_API_URL=your-api-url
+
 AWS_REGION_NAME=your-region
 AWS_BUCKET_NAME=your-bucket-name
 AWS_BUCKET_ENDPOINT_URL=your-bucket-endpoint
 AWS_ACCESS_KEY_ID=your-access-key-id
 AWS_SECRET_ACCESS_KEY=your-secret-access-key
+
+OAUTH_GITHUB_CLIENT_ID=your-github-client-id
+OAUTH_GITHUB_CLIENT_SECRET=your-github-client-secret
+CHAINLIT_AUTH_SECRET=generated-secret-key
