--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,15 @@
 OPENAI_API_KEY=your-api-key
-QDRANT_API_KEY=your-api-key
-QDRANT_API_URL=your-api-url
 
-AWS_REGION_NAME=your-region
-AWS_BUCKET_NAME=your-bucket-name
-AWS_BUCKET_ENDPOINT_URL=your-bucket-endpoint
-AWS_ACCESS_KEY_ID=your-access-key-id
-AWS_SECRET_ACCESS_KEY=your-secret-access-key
+QDRANT_API_KEY=supersecretkey
+QDRANT_API_URL=http://localhost:6333
 
-OAUTH_GITHUB_CLIENT_ID=your-github-client-id
-OAUTH_GITHUB_CLIENT_SECRET=your-github-client-secret
-CHAINLIT_AUTH_SECRET=generated-secret-key
+BUCKET_NAME=chainlit
+DEV_AWS_ENDPOINT=http://localhost:9000
+APP_AWS_ACCESS_KEY=minio
+APP_AWS_SECRET_KEY=minio123
+
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
+CHAINLIT_ADMIN_NAME='Change your name here'
+CHAINLIT_ADMIN_USERNAME=admin
+CHAINLIT_ADMIN_PASSWORD=admin123
+CHAINLIT_AUTH_SECRET=supersecretkey
