--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,7 @@ QDRANT_API_URL=http://localhost:6333
 
 BUCKET_NAME=chainlit
 DEV_AWS_ENDPOINT=http://localhost:9000
+APP_AWS_REGION=us-east-1
 APP_AWS_ACCESS_KEY=minio
 APP_AWS_SECRET_KEY=minio123
 
