--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 OPENAI_API_KEY=your-api-key
 
-QDRANT_API_KEY=supersecretkey
+QDRANT__SERVICE__API_KEY=supersecretkey
 QDRANT_API_URL=http://localhost:6333
 
 BUCKET_NAME=chainlit
@@ -10,7 +10,7 @@ APP_AWS_ACCESS_KEY=minio
 APP_AWS_SECRET_KEY=minio123
 
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
-CHAINLIT_ADMIN_NAME='Change your name here'
+CHAINLIT_ADMIN_DISPLAY_NAME='Change your name here'
 CHAINLIT_ADMIN_USERNAME=admin
 CHAINLIT_ADMIN_PASSWORD=admin123
 CHAINLIT_AUTH_SECRET=supersecretkey
