--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
     container_name: foodadvisor_qdrant
     image: qdrant/qdrant:v1.14.1
     environment:
-      - QDRANT__SERVICE__API_KEY=${QDRANT_API_KEY:-changeme}
+      - QDRANT__SERVICE__API_KEY=${QDRANT__SERVICE__API_KEY:-changeme}
     ports:
       - 6333:6333
       - 6334:6334
