--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pandas-gbq>=0.29.1",
     "pytest==8.3.5",
     "qdrant-client==1.13.3",
+    "rich>=14.0.0",
     "scipy>=1.15.3",
     "sqlparse==0.5.3",
     "tabulate==0.9.0",
