--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "TripAdvisor Food Bot"
 readme = "README.md"
 requires-python = "~=3.11"
 dependencies = [
-    "asyncpg>=0.30.0",
+    "asyncpg==0.30.0",
     "boto3==1.38.26",
     "chainlit==2.5.5",
     "db-dtypes==1.4.2",
@@ -16,11 +16,11 @@ dependencies = [
     "loguru==0.7.3",
     "numba==0.61.2",
     "pandas==2.2.3",
-    "pandas-gbq>=0.29.1",
+    "pandas-gbq==0.29.1",
     "pytest==8.3.5",
     "qdrant-client==1.13.3",
-    "rich>=14.0.0",
-    "scipy>=1.15.3",
+    "rich==14.0.0",
+    "scipy==1.15.3",
     "sqlparse==0.5.3",
     "tabulate==0.9.0",
     "unidecode==1.4.0",
