🐳 chore: refine candidate generation by pre-filtering
🎨 style(ui): customize chainlit ui with css

🎨 style(ui): customize chainlit ui with css

🎨 style(ui): customize chainlit ui with css

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ APP_AWS_ACCESS_KEY=minio
 APP_AWS_SECRET_KEY=minio123
 
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
-CHAINLIT_ADMIN_DISPLAY_NAME='Change your name here'
+CHAINLIT_ADMIN_DISPLAY_NAME='Example User'
 CHAINLIT_ADMIN_USERNAME=admin
 CHAINLIT_ADMIN_PASSWORD=admin123
 CHAINLIT_AUTH_SECRET=supersecretkey
