--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -36,12 +36,13 @@ cot = "tool_call"
 custom_css = '/public/stylesheet.css'
 # custom_js = "/public/script.js"
 
-login_page_image = "/public/login-background.jpg"
+login_page_image = "/public/login_background.jpeg"
 
-# [[UI.header_links]]
-#     name = "Issues"
-#     icon_url = "https://avatars.githubusercontent.com/u/128686189?s=200&v=4"
-#     url = "https://github.com/Chainlit/chainlit/issues"
+[[UI.header_links]]
+    name = "Source Code"
+    display_name = "GitHub"
+    icon_url = "https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png"
+    url = "https://github.com/insight-engineers/tripadvisor-foodbot"
 
 [meta]
 generated_by = "2.4.201"
