--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "fastembed==0.6.1",
     "google-cloud-bigquery==3.31.0",
     "google-cloud-bigquery-storage==2.30.0",
-    "llama-index==0.12.30",
+    "llama-index==0.12.37",
+    "llama-index-core==0.12.37",
+    "llama-index-llms-openai==0.3.44",
     "loguru==0.7.3",
     "numba==0.61.2",
     "pandas==2.2.3",
@@ -21,6 +23,7 @@ dependencies = [
     "qdrant-client==1.13.3",
     "rich==14.0.0",
     "scipy==1.15.3",
+    "setuptools>=80.9.0",
     "sqlparse==0.5.3",
     "tabulate==0.9.0",
     "unidecode==1.4.0",
